[gd_scene load_steps=6 format=3 uid="uid://bks41287cq5nw"]

[ext_resource type="Script" path="res://scripts/Start_screen.gd" id="1_i7yx8"]
[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://Assets/font/andina.ttf" id="1_k422q"]
[ext_resource type="Texture2D" uid="uid://m4ub6oll4ikv" path="res://Assets/Invaders/Invader3-1.png" id="1_lrxpi"]
[ext_resource type="Texture2D" uid="uid://bn227mp3yqjlo" path="res://Assets/Invaders/Invader2-1.png" id="3_3l2gr"]
[ext_resource type="Texture2D" uid="uid://dy2h5dklc8h7p" path="res://Assets/Invaders/Invader1-1.png" id="4_oulg7"]

[node name="Start_screen" type="CanvasLayer"]
script = ExtResource("1_i7yx8")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.0
offset_top = -262.0
offset_right = 307.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.619608, 0.564706, 1)
theme_override_fonts/font = ExtResource("1_k422q")
theme_override_font_sizes/font_size = 102
text = "Space 
Invaders"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="InvaderContainer_1" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="InvaderTexture" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/InvaderContainer_1"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("1_lrxpi")

[node name="InvaderLabel" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/InvaderContainer_1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_k422q")
theme_override_font_sizes/font_size = 30
text = "= 10 points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InvaderContainer_2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Invader2Texture" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/InvaderContainer_2"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("3_3l2gr")

[node name="Invader2Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/InvaderContainer_2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_k422q")
theme_override_font_sizes/font_size = 30
text = "= 20 points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InvaderContainer_3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Invader3Texture" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/InvaderContainer_3"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("4_oulg7")

[node name="Invader3Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/InvaderContainer_3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_k422q")
theme_override_font_sizes/font_size = 30
text = "= 40 points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_k422q")
theme_override_font_sizes/font_size = 40
text = "Play Space Invaders"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/Button" to="." method="load_game"]
[connection signal="timeout" from="Timer" to="." method="show_next_control"]
